<resources>
    <string name="app_name">DriveOP</string>
    <string name="map_api_key">AIzaSyDJpOybIpA06gvRqF3hnB28VLbhVBvzWVA</string>

    <string name="title_home">Leaderboard</string>
    <string name="title_dashboard">Shipment</string>
    <string name="title_notifications">Vehicle Inspection</string>
    <string name="optimised_route">Optimised Route</string>
    <string name="shortest_distance">Shortest Distance.....</string>
    <string name="faster_route">We Prefer Short and Fastest Route to Deliver the shipment</string>
    <string name="next">Next</string>
    <string name="login_now">Login now</string>
    <string name="email">Email:</string>
    <string name="enter_email_address">Enter Your Email address</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="save_your_fuel">Save your fuel</string>
    <string name="fuel_efficiency">Fuel Efficiency</string>
    <string name="fuel_discreption">We Prefer Short and Fastest Route to Deliver the shipment</string>
    <string name="earn_more">Earn More</string>
    <string name="track_your_earnings">Track your earnings</string>
    <string name="hello_again">Hello Again!</string>
    <string name="login_get_started">Login to get Started...</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot">Forgot</string>
    <string name="Password_notes">Don\'t worry it happens. Please enter the Email address associated with your account.</string>
    <string name="submit">Submit</string>
    <string name="enter_new_password">Enter Your New Password</string>
    <string name="retype_password">Retype Password:</string>
    <string name="confirm_password">Confirm Your Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_note">We have sent you access code vai SMS mobile number verification</string>
    <string name="don_t_received_otp">Don\'t received the OTP?</string>
    <string name="resend_code">Resend Code</string>
    <string name="your_email_verified">Your Email is verified</string>
    <string name="email_verify_note">We have sent you access code vai SMS mobile number verification</string>
    <string name="reset">Reset</string>
    <string name="current">Current</string>
    <string name="completed">Completed</string>
    <string name="shipments">Shipments</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="vehicle_inspection">Vehicle Inspection</string>
    <string name="deliver_address">House- 238, 3rd floor, 10 Poorvimarg Near blinkit warehouse Golf course road, Gurugram, Haryana Pin- 283739</string>
    <string name="comment_details">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="details">Details</string>
    <string name="general_details">General Details</string>
    <string name="comments">Comments</string>
    <string name="digital_copies">Digital Copies</string>
    <string name="capture_pod">Capture POD</string>
    <string name="record_exception">Record Exception</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="travel_sheets">Travel sheets</string>
    <string name="deliver_to">Deliver To</string>
    <string name="name">Name</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="my_routes">My Routes</string>
    <string name="about_company">About Company</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_out">Log Out</string>
    <string name="let_go">Let’s Go</string>
    <string name="dispatch_team">Dispatch Team</string>
    <string name="priority">Priority</string>
    <string name="items">Items</string>
    <string name="manifest">Manifest</string>
    <string name="current_eta">Current ETA</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="customer_number">Customer Number</string>
    <string name="type_message">Type a message...</string>
    <string name="route_address">House- 238, 3rd floor, 10 Poorvimarg Near blinkit warehouse Golf course road, Gurugram, Haryana Pin- 283739</string>
    <string name="heavy_traffic">Heavy Traffic</string>
    <string name="suggested_route_1">Suggested Route 1</string>
</resources>