<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.supplyop.driveop.ui.leaderboard.LeaderboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.supplyop.driveop.ui.shipment.ShipmentFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_shipment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.supplyop.driveop.ui.vehicle_inspection.VehicleInspectionFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_vehicle_inspection" />
</navigation>