<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.fragment.LoginHomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16ssp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/hello_again"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvShortestDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16ssp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_get_started"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRoute" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_10ssp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/email"
        android:textColor="@color/light_second_black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShortestDistance" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40ssp"
        android:layout_marginHorizontal="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_5ssp"
        android:background="@drawable/shape_edittext_login"
        android:hint="@string/enter_email_address"
        android:paddingStart="@dimen/_15ssp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmailErrorTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="Enter a email address"
        android:textColor="@color/red"
        android:visibility="gone"
        tools:visibility="visible"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_10ssp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password"
        android:textColor="@color/light_second_black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailErrorTxt" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40ssp"
        android:layout_marginHorizontal="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/shape_edittext_login"
        android:hint="@string/enter_password"
        android:paddingStart="@dimen/_15ssp"
        android:textAllCaps="false"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPasswordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="Enter a password"
        android:visibility="gone"
        tools:visibility="visible"
        android:textColor="@color/red"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <ImageView
        android:id="@+id/ivHidePwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/visibility_off_pwd"
        android:layout_marginEnd="@dimen/_32sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/etPassword"
        app:layout_constraintTop_toTopOf="@+id/etPassword" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_10ssp"
        android:layout_marginEnd="@dimen/_16ssp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/light_second_black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36ssp"
        android:layout_marginHorizontal="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_25ssp"
        android:background="@drawable/shape_button_details"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <ProgressBar
        android:id="@+id/prgbar"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>