<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="@dimen/_16sdp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/_16sdp">

    <ImageView
        android:id="@+id/ivCallLogo"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/call_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSureCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        tools:text="Are you sure you want to Call On +91-9031308932"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/ivCallLogo" />

    <TextView
        android:id="@+id/tvCustomerNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/customer_number"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvSureCall" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:letterSpacing="0"
        android:paddingHorizontal="@dimen/_15sdp"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/default_blue"
        android:textSize="@dimen/_12sdp"
        app:cornerRadius="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCustomerNumber"
        app:strokeColor="@color/dark_blue"
        app:strokeWidth="@dimen/_1sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:letterSpacing="0"
        android:paddingHorizontal="@dimen/_15sdp"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:cornerRadius="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="@id/btnYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnYes" />

</androidx.constraintlayout.widget.ConstraintLayout>